# advent-of-code

./: .gitignore  LICENSE  README.md
2018/day1/: Cargo.toml
2018/day1/src/: lib.rs  main.rs
2018/day10/: Cargo.toml
2018/day10/src/: lib.rs  main.rs
2018/day11/: Cargo.toml
2018/day11/src/: lib.rs  main.rs
2018/day12/: Cargo.toml  test
2018/day12/src/: lib.rs  main.rs
2018/day13/: Cargo.toml
2018/day13/src/: lib.rs  main.rs
2018/day14/: Cargo.toml
2018/day14/src/: main.rs
2018/day2/: Cargo.toml
2018/day2/src/: lib.rs  main.rs
2018/day3/: Cargo.toml
2018/day3/src/: lib.rs  main.rs
2018/day4/: Cargo.toml
2018/day4/src/: lib.rs  main.rs
2018/day5/: Cargo.toml
2018/day5/src/: lib.rs  main.rs
2018/day6/: Cargo.toml
2018/day6/src/: lib.rs  main.rs
2018/day7/: Cargo.toml
2018/day7/src/: lib.rs  main.rs
2018/day8/: Cargo.toml
2018/day8/src/: lib.rs  main.rs
2018/day9/: Cargo.toml
2018/day9/src/: lib.rs  main.rs
2019/day1/src/: main.rs
2019/day2/: Cargo.toml
2019/day3/: Cargo.toml
2019/day4/: Cargo.toml
2019/day5/: Cargo.toml
2019/day6/: Cargo.toml
2019/day7/: Cargo.toml
2019/day8/: Cargo.toml
2020/day1/: Cargo.toml
2020/day2/: Cargo.toml
2020/day4/: Cargo.toml
aoc-2022/src/: main.rs
aoc-2023/src/: day01.rs  lib.rs
aoc-2024/: Cargo.toml
year2020/: Cargo.toml
year2020/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
year2021/: ChangeLog.md  package.yaml  year2021.cabal
year2021/day1/: Main.hs
year2021/day2/: Main.hs
year2021/day3/: Main.hs
year2021/day4/: Main.hs
(+12 files in other folders)
