cabal-version:      2.4

name:               year2021
version:            0.1.0.0
author:             Jan Cybulski
maintainer:         13089097+Dzonas@users.noreply.github.com

executable day1
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   day1
    default-language: Haskell2010

executable day2
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   day2
    default-language: Haskell2010

executable day3
    main-is:          Main.hs
    build-depends:
      , base ^>=4.14.3.0
      , containers ^>=0.6.5.1
    hs-source-dirs:   day3
    default-language: Haskell2010
